--- a/README
+++ b/README
@@ -24,6 +24,53 @@ kvm image file = /var/lib/libvirt/images/web-server01.img
 network interface = eth2
 mac address = 00:00:00:00:00:00
 
+---
+
+o server01.xml
+=============================================================
+<domain type='kvm'>
+  <name>server01</name>
+  <uuid>02EA52C4-A000-11E1-AE64-3E07BFE11232</uuid>
+  <memory>2097152</memory>
+  <currentMemory>2097152</currentMemory>
+  <vcpu>1</vcpu>
+  <os>
+    <type arch='x86_64' machine='rhel5.4.0'>hvm</type>
+    <boot dev='hd'/>
+  </os>
+  <features>
+    <acpi/>
+    <apic/>
+    <pae/>
+  </features>
+  <clock offset='utc'>
+    <timer name='pit' tickpolicy='delay'/>
+  </clock>
+  <on_poweroff>destroy</on_poweroff>
+  <on_reboot>restart</on_reboot>
+  <on_crash>restart</on_crash>
+  <devices>
+    <emulator>/usr/libexec/qemu-kvm</emulator>
+    <disk type='file' device='disk'>
+      <driver name='qemu' type='raw' cache='none'/>
+      <source file='./make-kvm-xml-server01.img'/>
+      <target dev='vda' bus='virtio'/>
+    </disk>
+    <interface type='bridge'>
+      <mac address='00:00:00:00:00:00'/>
+      <source bridge='eth2'/>
+      <model type='virtio'/>
+    </interface>
+    <serial type='pty'>
+      <target port='0'/>
+    </serial>
+    <console type='pty'>
+      <target port='0'/>
+    </console>
+  </devices>
+</domain>
+=============================================================
+
 --------------------------------------------------------------------------------
 
 enjoy make zabbix host xml
